[package]
name = "kitsu-favourite-character"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
tokio = { version = "1", features = ["full"] }
gql_client = "1.0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
rpassword = "5"